// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin implementation > generate API type 1`] = `
"import { TheDate, SerializedTheDate, TheTime, SerializedTheTime } from "@duplojs/lang/chrono";

export type Routes = {
    readonly method: "GET";
    readonly path: "/user";
    readonly body: {
        readonly name: string;
        readonly age: number;
    };
    readonly headers: {
        readonly header1: SerializedTheDate | TheDate;
        readonly header2: SerializedTheTime | TheTime;
    };
    readonly responses: {
        readonly code: "422";
        readonly information: "extract-error";
        readonly body?: undefined;
    } | {
        readonly code: "409";
        readonly information: "the-conflict";
        readonly body?: undefined;
    } | {
        readonly code: "200";
        readonly information: "success";
        readonly body: string;
    };
};"
`;

exports[`plugin implementation > generate data parser files from identified route data parsers 1`] = `
[
  "routes.d.ts",
  "export type ChildParser = string;

export type Routes = {
    readonly method: "GET";
    readonly path: "/generated";
    readonly body: {
        readonly child: ChildParser;
        readonly count: number;
    };
    readonly responses: {
        readonly code: "422";
        readonly information: "extract-error";
        readonly body?: undefined;
    } | {
        readonly code: "200";
        readonly information: "generated.success";
        readonly body: ChildParser;
    };
};",
]
`;

exports[`plugin implementation > generate data parser files from identified route data parsers 2`] = `
[
  "generated/types.ts",
  "",
]
`;

exports[`plugin implementation > generate data parser files from identified route data parsers 3`] = `
[
  "generated/childParserDataStructure.ts",
  "import * as DDataStructure from "@duplojs/lang/dataStructure";

export const childParserDataStructure = DDataStructure.TypeStructure(DDataStructure.StringType(), []);",
]
`;

exports[`plugin implementation > generate data parser files from identified route data parsers 4`] = `
[
  "generated/bodyParserDataStructure.ts",
  "import * as DDataStructure from "@duplojs/lang/dataStructure";

export const bodyParserDataStructure = DDataStructure.ObjectStructure({
    child: childParserDataStructure,
    count: DDataStructure.TypeStructure(DDataStructure.NumberType(), [])
}, []);",
]
`;

exports[`plugin implementation > generate data parser files from identified route data parsers 5`] = `
[
  "generated/index.ts",
  "export * from "./childParserDataStructure";
export * from "./bodyParserDataStructure";",
]
`;

exports[`plugin implementation > generate data parser files only from explicit data parsers when disabledFromRoute is enabled 1`] = `
[
  "routes.d.ts",
  "export type RouteParser = string;

export type Routes = {
    readonly method: "GET";
    readonly path: "/generated";
    readonly body: RouteParser;
    readonly responses: {
        readonly code: "422";
        readonly information: "extract-error";
        readonly body?: undefined;
    } | {
        readonly code: "204";
        readonly information: "generated.success";
        readonly body?: undefined;
    };
};",
]
`;

exports[`plugin implementation > generate data parser files only from explicit data parsers when disabledFromRoute is enabled 2`] = `
[
  "generated/types.ts",
  "",
]
`;

exports[`plugin implementation > generate data parser files only from explicit data parsers when disabledFromRoute is enabled 3`] = `
[
  "generated/explicitParserDataStructure.ts",
  "import * as DDataStructure from "@duplojs/lang/dataStructure";

export const explicitParserDataStructure = DDataStructure.TypeStructure(DDataStructure.NumberType(), []);",
]
`;

exports[`plugin implementation > generate data parser files only from explicit data parsers when disabledFromRoute is enabled 4`] = `
[
  "generated/index.ts",
  "export * from "./explicitParserDataStructure";",
]
`;
